# mk_intf

./: depend_struct.hh  emc.hh  emc_nml.hh  emcpos.h  shcom.cc  shcom.hh
src/: CMakeLists.txt  auto_gen_message.sh  depend_struct.cc  depend_struct.hh  emc.cc  emc.hh  emc_nml.hh  emccfg.h  emcpos.h  emctool.h  modal_state.cc  modal_state.hh  parent_msg_update.py  shcom.cc  shcom.hh
test/: build_test.sh  emc_nml.cc  linuxcnc.nml  main.cc
